new changes to navbar, logo, and both images

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -36,7 +36,7 @@
   <button type="button">Get Started</button>
 </div>
  <div class="rightcolumn">
-  <img src="img/header-img.png" alt="Image of a code snippet." >
+  <img src="img/header-img.png" alt="Image of a code snippet." class="header-img">
   </div>
   </div>
 </header>
@@ -52,7 +52,7 @@
 </div>
 </div>
  <div class="img-snippet">
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen" class="img-snippet1">
   </div>
   <div class="wrapper">
   <div class="service-content">
